<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.7</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>eu.eosc</groupId>
	<artifactId>observatory</artifactId>
	<version>1.2.4-SNAPSHOT</version>
	<name>observatory</name>
	<description>EOSC Portal Observatory</description>
	<properties>
		<java.version>11</java.version>
		<registry-core.version>2.3.5</registry-core.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.security.oauth</groupId>
			<artifactId>spring-security-oauth2</artifactId>
			<version>2.5.1.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
			<version>2.6.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
			<version>2.6.1</version>
		</dependency>

		<!-- Redis Session -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-data-redis</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>eu.openminted</groupId>
			<artifactId>registry-core-api</artifactId>
			<version>${registry-core.version}</version>
		</dependency>
		<dependency>
			<groupId>eu.openminted</groupId>
			<artifactId>registry-core-rest</artifactId>
			<version>${registry-core.version}</version>
		</dependency>
		<dependency>
			<groupId>eu.openminted</groupId>
			<artifactId>registry-core-helper</artifactId>
			<version>${registry-core.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>gr.athenarc</groupId>
			<artifactId>catalogue</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>gr.athenarc</groupId>
			<artifactId>authorization</artifactId>
			<version>0.0.2</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>9.10.1</version>
		</dependency>

    </dependencies>

	<scm>
		<connection>scm:git:ssh://git@github.com/madgeek-arc/eosc-observatory.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/madgeek-arc/eosc-observatory.git</developerConnection>
		<url>https://github.com/madgeek-arc/eosc-observatory.git</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<uniqueVersion>true</uniqueVersion>
			<id>omtd-releases</id>
			<layout>default</layout>
			<url>https://repo.openminted.eu/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<uniqueVersion>true</uniqueVersion>
			<id>omtd-snapshots</id>
			<layout>default</layout>
			<url>https://repo.openminted.eu/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>omtd-snapshots</id>
			<layout>default</layout>
			<url>https://repo.openminted.eu/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>omtd-releases</id>
			<layout>default</layout>
			<url>https://repo.openminted.eu/content/repositories/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>


	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.0-M4</version>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/application.yml</exclude>
				</excludes>
			</resource>
		</resources>
	</build>

</project>
